# scrap-mechanic-mods

./: .gitignore
Syringe/: NOTICE.txt  README.md  description.json
Syringe/Gui/: IconMap.xml
Syringe/Gui/Language/English/: inventoryDescriptions.json
Syringe/Objects/Database/: rotationsets.json
Syringe/Objects/Database/ShapeSets/: parts.json
Syringe/Scripts/: peer.lua  servo.lua
Syringe/Scripts/Sm-Keyboard/Gui/: PeerWidget.layout  ServoWidget.layout
Syringe/Scripts/Sm-Keyboard/Scripts/: Keypad.lua  PeerWidget.lua  ServoWidget.lua
SyringeSource/: .gitignore  Cargo.toml
SyringeSource/src/: injector.rs  main.rs  peer.rs
SyringeSource/src/backend/: mod.rs  unix.rs  windows.rs
dasetwas.engineerstoolbox/: description.json
dasetwas.engineerstoolbox/Gui/: IconMap.xml
dasetwas.engineerstoolbox/Gui/Language/English/: inventoryDescriptions.json
dasetwas.engineerstoolbox/Objects/Database/ShapeSets/: parts.json
dasetwas.engineerstoolbox/Objects/Textures/: ccomD.tga  cotD.tga  lcomD.tga  lessdragD.tga  scaleD.tga  thrustscaleD.tga
dasetwas.engineerstoolbox/Scripts/: indicators.lua  physics.lua
dasetwas.engineerstoolbox/Survival/CraftingRecipes/: craftbot.json
dasetwas.wings/: description.json
dasetwas.wings/Gui/: IconMap.xml
dasetwas.wings/Objects/Database/: rotationsets.json
dasetwas.wings/Objects/Database/ShapeSets/: airfoils.json  (+5 more)
dasetwas.wings/Objects/Mesh/: chute2.fbx  modular parts.txt
dasetwas.wings/Scripts/: airfoil.lua  chute.lua  chute2.lua  inventory.lua  propeller.lua
dasetwas.wings/Survival/CraftingRecipes/: craftbot.json
(+4 files in other folders)
