[package]
name = "sminject"
version = "0.1.0"
authors = ["DasEtwas <18222134+DasEtwas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
err-derive = "0.3.0"
clap = "2.33.0"
crossbeam-channel = "0.5.1"
parking_lot = "0.11.1"
byteorder = "1.4.3"
color-eyre = "0.5.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt","sysinfoapi", "synchapi", "winerror", "minwindef", "processthreadsapi", "psapi", "winuser", "windef", "errhandlingapi", "handleapi", "memoryapi", "ntlsa", "processthreadsapi", "psapi", "securitybaseapi", "winuser", "winbase"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.98"

[profile.release]
codegen-units = 1
debug = true
overflow-checks = true